--- a/henrik_almqvist.html
+++ b/henrik_almqvist.html
@@ -32,13 +32,13 @@
         <img src="golf.jpg" alt="Golf" width="500">
 
 
-        <h3>Nedan är 5 saker jag är "bra" på!</h3>
+        <h3>Nedan är 5 saker jag är bra på:</h3>
         <ul>
             <li>Gaming</li>
             <li>Golf</li>
             <li>Fotboll</li>
-            <li>SQL</li>
             <li>Kika på youtube</li>
+            <li>Titta på sport</li>
         </ul>
 
         <h3>Länk till min <a href="https://github.com/HenrikAlmq" target="_blank">github!</a> </h3>
