--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kontaktsida</title>
+</head>
+
+<body style="background-color:black;">
+
+    <h1 style="color:whitesmoke;">Kontakter/Hackaton3</h1>
+    <a href="daniel_andersson.html" alt="Daniel.A kontaktsida" style="color:white;" title="Daniels kontaktsida">Daniels
+        kontaktsida</a>
+    <br> <a href="henrik_almqvist.html" alt="Henrik.A kontaktsida" style="color:white;"
+        title="Henriks kontaktsida">Henriks kontaktsida</a>
+    <br> <a href="kevin_ullbrandt.html" alt="Kevin.U kontaktsida" style="color:white;"
+        title="Kevin.U kontaktsida">Kevin.U kontaktsida</a>
+    <br> <a href="Kevin_Martinsson.html" alt="Kevin.M kontaktsida" style="color:white;" title="Kevin.M">Kevin.M
+        kontaktsida</a>
+    <br> <a href="Stephanie_Thorisson.html" alt="Stephanie.T kontaktsida" style="color:white;"
+        title="Stephanie kontaktsida">Stephanie kontaktsida</a>
+    <hr><img src="Hackatongroup3.jpg" alt="Hackaton3 Grupp" width="500" height="400">
+</body>
+
+</html>
